--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
     "cuid": "^2.1.8",
+    "luxon": "^1.25.0",
     "mdbreact": "^4.27.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
