--- a/api/package.json
+++ b/api/package.json
@@ -15,9 +15,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.10.9",
-    "mongoose-partial-full-search": "^0.0.4",
     "morgan": "~1.9.1",
+    "@supabase/supabase-js": "^2.42.5",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
