--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "bootstrap": "^4.5.3",
     "lodash": "^4.17.21",
     "luxon": "^1.25.0",
-    "mdbreact": "^4.27.0",
+    "mdbreact": "^5.2.0",
+    "moment": "^2.30.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
