--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 SUPABASE_URL=<your-supabase-project-url>
 SUPABASE_KEY=<your-supabase-service-key>
-REACT_APP_API_HOST=<your-api-host-url>
+# Hostname and port for the backend API
+# Defaults to localhost:5000 if unset
+REACT_APP_API_HOST=localhost:5000
